text_ranking 코드 우선 완료.. 하지만 수정 결과가 무의미

--- a/book_review_crawling.ipynb
+++ b/book_review_crawling.ipynb
@@ -85,7 +85,9 @@
    "cell_type": "code",
    "execution_count": 5,
    "id": "cefc5b90",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -115,6 +117,17 @@
    ],
    "source": [
     "print(comment)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "9bc8992b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('text.txt', 'w') as file:\n",
+    "    file.write(comment)"
    ]
   }
  ],
