크롤링 및 텍스트랭킹 완료

--- a/Make_BestSeller_List(API).ipynb
+++ b/Make_BestSeller_List(API).ipynb
@@ -528,9 +528,9 @@
     "                    date = data['response']['request']['startDt']\n",
     "                    print(date[0:4])\n",
     "                    print(data['response']['request']['gender'])\n",
-    "                    print(data['response']['request']['age'])\n",
-    "                    print(data['response']['resultNum'])\n",
-    "                    print('--------------------------------------------')\n",
+    "                    print(data['re\n",
+    "                    print('---------------------sponse']['request']['age'])\n",
+    "                    print(data['response']['resultNum'])-----------------------')\n",
     "                    datas.append(data)\n",
     "                except JSONDecodeError:\n",
     "                    print(\"Failed to decode json from response.\")\n",
