--- a/text_ranking.ipynb
+++ b/text_ranking.ipynb
@@ -2,25 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 2,
    "id": "006bae07",
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "!pip install PyKomoran\n",
-    "!pip install --upgrade PyKomoran\n",
+    "# !pip install PyKomoran\n",
+    "# !pip install --upgrade PyKomoran\n",
     "import pandas as pd\n",
     "import re\n",
-    "from PyKomoran import Komoran, DEFAULT_MODEL\n",
     "from konlpy.tag import Okt\n",
     "import networkx as nx"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 3,
    "id": "c4ee1dce",
    "metadata": {},
    "outputs": [],
@@ -36,67 +35,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
-   "id": "ed6771a4",
+   "execution_count": 4,
+   "id": "dea8ba17",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['출', '간', '주년', '쇄', '기념', '유발', '하라', '리', '특별', '서문', '수록', '천재', '사상가', '뉴욕타임스', '유발', '하라', '리', '대표', '작', '사피']\n"
-     ]
+     "data": {
+      "text/plain": [
+       "2344"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "# Get POS tags using Okt\n",
-    "\n",
-    "\n",
-    "# Extract words that are either noun, adjective or verb\n",
-    "\n",
-    "\n",
-    "print(filtered_words[:20])  # Display the first 20 filtered words\n"
+    "len(text)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 5,
    "id": "1776c59a",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "출간 주년쇄만부 기념\n",
-      "유발 하라리 특별 서문 수록\n",
-      "\n",
-      "천재 사상가뉴욕타임스 유발 하라리의 대표작 사피엔스 이제 불황이라는 수식어가 전혀 어색하지 않은 국내 출판시장에서도 사피엔스는 인문교양 분야의 트렌드를 주도하며 년 월 기준 쇄 발행만부 판매라는 놀라운 성적을 거두고 있다 전 세계적으로는 개 국어로 출간되어 만부 이상 팔려 글로벌 베스트셀러로 자리매김한 지 오래다 빌 게이츠 재레드 다이아몬드 마크 저커버그 뇌과학자 김대식 카이스트 교수 유시민 작가 김상욱 경희대 물리학과 교수 등 국내외 내로라하는 지성인들이 강력 추천한 사피엔스는 명실상부 우리 시대의 고전이다 인류 역사와 미래를 종횡무진 가로지르는 사피엔스의 통찰은 불확실하고 복잡한 세계를 이해하고 대비하는 데 반드시 필요하다\n",
-      "책 서두에는 년 원서 출간 이후 년을 돌아보고 위기 상황을 맞은 인류에게 건네는 제언이 특별 서문으로 수록되었다 기후위기와 코로나 팬데믹 미중 패권 경쟁과 러시아의 우크라이나 침공 기술혁신의 명암과 날로 심해지는 양극화 그리고 세계 곳곳에서 목격되는 민주주의 붕괴와 장기 경기침체 조짐까지 현재 인류는 그 어느 때보다 어려운 상황을 맞고 있다 난국을 헤쳐나가기 위해 무엇을 해야 할까 저자는 더 나은 세상을 위한 키워드로 인간 이해를 강조한다 출간 주년 서문이지만 글로벌 베스트셀러를 출간한 개인적인 소회보다는 유례없는 난관을 헤쳐나가기 위해 동료 사피엔스에게 전하는 호소가 담겨 있다\n",
-      "\n",
-      "\n",
-      "인공지능의 시대 우리가 알아야 할 것은 코딩보다 인간의 마음\n",
-      "특별 서문을 통해 동료 사피엔스에게 전하는 호소의 글\n",
-      "\n",
-      "특별 서문은 저자가 느낀 충격과 당혹감으로 시작한다 최근 전 세계인의 이목을 집중시킨 챗의 이전 버전인 라는 강한 인공지능이 저자를 흉내 내 쓴 글이 놀랍도록 그럴싸했기 때문이다 나는 의 일부 주장에 동의하지 않는다 하지만 그 글이 실제로 모종의 주장을 펴고 있다는 점에서 놀라지 않을 수 없었다 사피엔스 출간 이후 년간 인공지능은 혁명적으로 인류의 삶을 바꾸어놓았다 저자의 예측대로 머지않아 우리 자신보다 인공지능이 우리를 더 잘 이해하는 날이 올지도 모른다 디스토피아 영화가 현실이 될 것인가\n",
-      "다가올 기술의 시대 컴퓨터 프로그램이 아니라 인간의 마음을 이해할 때 새로운 길이 열릴 것이라고 저자는 말한다 인류는 신과 국가와 기업에 대한 허구의 이야기를 만들어내 문명을 탄생시켜 발전해왔다 인간은 다른 어떤 동물보다 더 많은 사실을 알지만 또한 더 많은 허구를 믿는다 이런 이야기들이 우리 사회의 근간이자 우리 삶에 의미를 주는 원천이다 그래서 새로운 시대를 맞아 새로운 이야기를 만들어낼 인간의 마음을 아는 것이 코딩을 아는 것보다 중요하다 기술 전문가 경제학자의 지식뿐 아니라 시인과 철학자 역사가의 지혜가 더욱 필요한 이유다\n",
-      "\n",
-      "\n",
-      "인간의 역사와 미래에 대한 가장 논쟁적이고 대담한 대서사\n",
-      "문명의 배를 타고 진화의 바다를 항해한 인류는 이제 어디로 나아갈 것인가\n",
-      "\n",
-      "사피엔스는 풍부한 지식정보를 번뜩이는 스토리텔링으로 직조해 보기 드물게 재미있는 인문교양서다 벽돌책이지만 많은 독자의 선택을 받는 이유다 폭넓은 지식에다 대담한 해석과 통찰에 대중을 흡인하는 경쾌한 글솜씨까지 겸비한 하라리의 책을 읽는 경험은 성대한 지적 향연에 초대받는 즐거움을 준다 고고인류학부터 정치 사회 경제 문화 생명공학 정보기술 데이터과학에 이르는 신구 학문의 최신 성과를 고루 담고 있어 사피엔스를 읽고 나면 웬만한 분야의 주요 저서들을 두루 섭렵한 셈이 된다 그러면서도 그는 결코 가볍지 않은 주제들을 무겁지 않게 풀어낼 줄 안다 각 분야의 연구 성과들을 소화해 이야기의 토대와 큰 줄기로 삼되 절묘한 지점에서 자신만의 추론과 상상으로 가지를 뻗는다 자연과 문화 물질과 의식 성과 속 종교와 과학 민주주의와 민족주의 정체성과 의미 알고리즘과 데이터 같은 굵직굵직한 학문적 담론이 그의 손에서는 흥미진진한 스토리로 둔갑한다\n",
-      "변방의 유인원 호모 사피엔스는 어떻게 세상의 지배자가 되었는가 수렵채집을 하던 우리 조상들은 어떻게 한곳에 모여 도시와 왕국을 건설했는가 인간은 왜 지구 역사상 가장 치명적인 동물이 되었는가 과학은 모든 종교의 미래인가 인간의 유효기간은 언제까지인가 인류의 시원부터 인지혁명 농업혁명 과학혁명을 거쳐 끊임없이 진화해온 인간의 역사를 생물학 경제학 종교학 심리학 철학 등 여러 학문의 경계를 넘나들며 다양하고 생생하게 조명한 전인미답의 문제작 사피엔스 당신은 이 책을 사랑할 수밖에 없다제레드 다이아몬드\n",
-      "['출', '간', '주년', '쇄', '부', '기념', '유발', '하라', '리', '특별', '서문', '수록', '천재', '사상가', '뉴욕타임스', '유발', '하라', '리', '대표', '작', '사피', '스', '이제', '불황', '수식어', '전혀', '어색하지', '않은', '국내', '출판', '시장', '사피', '스', '인문', '교양', '분야', '트렌드', '주도하며', '기준', '쇄', '발행', '부', '판매', '놀라운', '성적', '거두고', '전', '세계', '개', '국어', '출', '간', '되어', '부', '팔려', '글로벌', '베스트셀러', '자리매', '김', '지', '빌', '게이츠', '재', '레드', '다이아몬드', '마크', '저커버그', '뇌', '과학자', '김대식', '카이스트', '교수', '유시민', '작가', '김상욱', '경희대', '물리학', '교수', '국내외', '로라', '지성인', '강력', '추천', '사피', '스', '명실', '상부', '시대', '고전', '인류', '역사', '미래', '종횡무진', '가로지르는', '사피', '스', '통찰', '불확실하고', '복잡한', '세계', '이해', '대비', '하는', '데', '필요하다', '책', '서두', '원서', '출', '간', '이후', '돌아보고', '위기', '상황', '맞은', '인류', '건네는', '제언', '특별', '서문', '수록', '되었다', '기후', '위기', '코로나', '팬데믹', '미', '중', '패권', '경쟁', '러시아', '우크라이나', '침공', '기술', '혁신', '명암', '날로', '심해지는', '양극화', '세계', '곳곳', '목격', '되는', '민주주의', '붕괴', '장기', '경기', '침체', '조짐', '현재', '인류', '어려운', '상황', '맞고', '난국', '헤쳐', '나가기', '위해', '해야', '할까', '저자', '더', '나은', '세상', '위', '키', '워드', '인간', '이해', '강조', '한다', '출', '간', '주년', '서문', '글로벌', '베스트셀러', '출', '간', '개인', '회', '유례', '없는', '난관', '헤쳐', '나가기', '위해', '동료', '사피', '스', '전하', '호소', '담겨', '인공', '지능', '시대', '알아야', '할', '코딩', '인간', '마음', '특별', '서문', '통해', '동료', '사피', '스', '전하', '호소', '글', '특별', '서문', '저자', '느낀', '충격', '당혹', '감', '시작', '최근', '전', '세계', '이목', '집중', '시킨', '챗', '이전', '버전', '강한', '인공', '지능', '저자', '흉내', '내', '쓴', '글', '놀랍도록', '그럴', '싸했기', '때문', '일부', '주장', '동의', '하지', '않는다', '글', '실제', '모종', '주장', '펴고', '있다는', '점', '놀라지', '않을', '수', '없었다', '사피', '스', '출', '간', '이후', '인공', '지능', '혁명', '인류', '삶', '바꾸어놓았다', '저자', '예측', '머', '않아', '인공', '지능', '더', '잘', '이해', '하는', '날', '지도', '모른다', '디스토피아', '영화', '현실', '될', '다가올', '기술', '시대', '컴퓨터', '프로그램', '아니라', '인간', '마음', '이해', '할', '새로운', '길이', '열릴', '저자', '말', '한다', '인류', '신', '국가', '기업', '대한', '허구', '이야기', '만들어내', '문명', '탄생', '시켜', '발전', '해왔다', '인간', '동물', '더', '많은', '사실', '알', '더', '많은', '허구', '믿는다', '이야기', '사회', '근간', '이자', '삶', '의미', '주는', '원천', '새로운', '시대', '맞아', '새로운', '이야기', '만들어', '낼', '인간', '마음', '아는', '코딩', '아는', '중요하다', '기술', '전문가', '경제학자', '지식', '아니라', '시인', '철학자', '역사', '가의', '지혜', '더욱', '필요한', '이유', '인간', '역사', '미래', '대한', '가장', '논쟁', '대담한', '서사', '문명', '배', '타고', '진화', '바다', '항해', '인류', '이제', '나아갈', '사피', '스', '풍부한', '지식', '정보', '번뜩이는', '스토리텔링', '직조', '해', '보기', '드물게', '재미있는', '인문', '교양', '서다', '벽돌', '책', '많은', '독자', '선택', '받는', '이유', '폭넓은', '지식', '대담한', '해석', '통찰', '대중', '흡인', '하는', '경쾌한', '글', '솜씨', '겸비', '하라', '리', '책', '읽는', '경험', '성대', '지적', '향연', '초대', '받는', '즐거움', '준다', '고인류학', '정치', '사회', '경제', '문화', '생명공학', '정보기술', '데이터', '과학', '이르는', '신구', '학문', '최신', '성과', '고루', '담고', '있어', '사피', '스', '읽고', '나면', '웬만한', '분야', '주요', '저서', '두루', '섭렵', '셈', '된다', '그러면서도', '결코', '가볍지', '않은', '주제', '무겁지', '않게', '풀어', '낼', '줄', '안다', '분야', '연구', '성과', '소화', '해', '이야기', '토대', '큰', '줄기', '삼되', '절묘한', '지점', '추론', '상상', '가지', '뻗는다', '자연', '문화', '물질', '의식', '성과', '속', '종교', '과학', '민주주의', '민족주의', '정체', '성과', '의미', '알고리즘', '데이터', '같은', '굵', '직', '굵직한', '학문', '담론', '손', '흥미진진', '스토리', '둔갑', '한다', '변방', '유인원', '호모', '사피', '스', '세상', '지배자', '되었는가', '수렵', '채집', '하던', '조상', '곳', '모여', '도시', '왕국', '건설', '했는가', '인간', '지구', '역사상', '가장', '치명', '동물', '되었는가', '과학', '모든', '종교', '미래', '인간', '유효', '기간', '인류', '시원', '인지', '혁명', '농업혁명', '과학혁명', '거쳐', '끊임없이', '진화', '해온', '인간', '역사', '생물학', '경제학', '종교학', '심리학', '철학', '여러', '학문', '경계', '넘나', '들며', '다양하고', '생생하게', '조명', '전인', '미답의', '제작', '사피', '스', '책', '사랑', '할', '수', '없다', '제레드', '다이아몬드']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Initialize Komoran tokenizer\n",
     "okt = Okt()\n",
@@ -104,13 +69,11 @@
     "def preprocess_text(text, stop_words):\n",
     "    # Remove non-Korean characters and whitespace\n",
     "    text = re.sub(r'[^가-힣\\s]', '', text)\n",
-    "    print(text)\n",
     "    # Tokenize the text using Komoran\n",
     "    pos_tags = okt.pos(text)\n",
     "    filtered_words = [word for word, pos in pos_tags if pos in [\"Noun\", \"Adjective\", \"Verb\"]]\n",
     "    # Remove stopwords\n",
     "    words = [word for word in filtered_words if word not in stop_words]\n",
-    "    print(words)\n",
     "    return words\n",
     "\n",
     "preprocessed_words = preprocess_text(text, stop_words)"
@@ -118,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 6,
    "id": "83789b53",
    "metadata": {},
    "outputs": [],
@@ -160,11 +123,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
-   "id": "d7d16086",
-   "metadata": {
-    "scrolled": false
-   },
+   "execution_count": 7,
+   "id": "8eae06dc",
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -180,10 +141,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "03bf2ae6",
+   "id": "a2793aed",
    "metadata": {},
    "source": [
-    "### 특정 품사들만 추출하도록 변경하는 게 좋을 듯"
+    "### 생각한대로 나오지는 않는다.."
    ]
   }
  ],
